--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -6,7 +6,8 @@ body { font-family: Georgia; font-size: 16px }
 #loader { position: absolute; margin-top: -100px; margin-left: 650px  }
 #notifier { position: fixed; top: 10px; right: 45px; font-size: 104px }
 #notifier a { text-decoration: none }
-#feedback { position: fixed; bottom: 0px; right: 10px }
+#feedback { position: fixed; bottom: 20px; right: 10px }
 #feedback textarea { width: 200px; height: 100px; font-family: Georgia; font-size: 20px; padding: 4px; color: #666 }
 #feedback textarea.hover { color: #000; width: 300px; height: 300px }
 #feedback p { padding: 5px }
+#counter { position: fixed; bottom: 10px; right: 10px }
