--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -5,6 +5,7 @@
     = javascript_include_tag "jquery"
     = javascript_include_tag "rails"
     = javascript_include_tag "application"
+    = javascript_include_tag 'swfobject'
     =stylesheet_link_tag 'default'
   %body
     =yield
