--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -2,6 +2,7 @@ body { font-family: Georgia; font-size: 16px }
 .project { width: 600px; border-top: 1px solid #ddd; padding: 10px 15px 15px 15px }
 .project h3 { margin: 0 }
 .project strong { float: right }
+.project.match { border: 10px solid red }
 #nav { text-align: center }
 #loader { position: absolute; margin-top: -100px; margin-left: 650px  }
 #notifier { position: fixed; top: 10px; right: 45px; font-size: 104px }
@@ -11,3 +12,5 @@ body { font-family: Georgia; font-size: 16px }
 #feedback textarea.hover { color: #000; width: 300px; height: 300px }
 #feedback p { padding: 5px }
 #counter { position: fixed; bottom: 10px; right: 10px }
+#flashbanner { position: absolute; left: -1000px }
+#controls { margin-bottom: 10px }
