--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -8,9 +8,11 @@ body { font-family: Georgia; font-size: 16px }
 #notifier { position: fixed; top: 10px; right: 45px; font-size: 104px }
 #notifier a { text-decoration: none }
 #feedback { position: fixed; bottom: 20px; right: 10px }
-#feedback textarea { width: 200px; height: 100px; font-family: Georgia; font-size: 20px; padding: 4px; color: #666 }
+textarea, input { font-family : Georgia; font-size: 20px; padding: 4px; color: #666; }
+#feedback textarea { width: 200px; height: 100px; color: #666 }
 #feedback textarea.hover { color: #000; width: 300px; height: 300px }
 #feedback p { padding: 5px }
 #counter { position: fixed; bottom: 10px; right: 10px }
 #flashbanner { position: absolute; left: -1000px }
 #controls { margin-bottom: 10px }
+#stop_words { width: 300px }
