фильтрация по исходнику

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -1,6 +1,6 @@
 %html
   %head
-    %title fa
+    %title harumambu.ru
     %meta(http-equiv="Content-type" content="text/html;charset=utf-8")
     = javascript_include_tag "jquery"
     = javascript_include_tag "rails"
