--- a/app/views/projects/_project.js.erb
+++ b/app/views/projects/_project.js.erb
@@ -4,6 +4,7 @@
       'title' : '<%=raw project.title %>', 
       'desc' : '<%=raw project.attributes['desc'] %>',
       'created_at' : '<%=l project.created_at %>',
-      'url' : '<%= project.url %>'
+      'url' : '<%= project.url %>',
+      'klass' : '<%= project.klass %>'
     }
 
