--- a/app/views/projects/index.erb
+++ b/app/views/projects/index.erb
@@ -7,6 +7,11 @@
 <div id="projects"></div>
 <div id="notifier"><a href="javascript:;" onclick="window.scroll(0, 0)">↑</a></div>
 <div id="loader"></div>
+<div id="sources">
+  <% SOURCES.each do |source| %>
+    <div><input type="checkbox" checked="checked" id="source_<%= source.name %>" /> <label for="source_<%=source.name%>"><%= source.desc %></label></div>
+  <% end %>
+</div>
 <div id="feedback">
   <% form_tag :feedback, :remote => true  do |f| %>
     <%= text_area_tag :feedback_message, @feedback.message, :onclick => "$(this).addClass('hover')"%><br/>
