--- a/app/views/projects/_project.js.erb
+++ b/app/views/projects/_project.js.erb
@@ -5,6 +5,7 @@
       'desc' : '<%=raw(project.desc) %>',
       'created_at' : '<%=l project.created_at %>',
       'url' : '<%= project.url %>',
-      'klass' : '<%= project.klass %>'
+      'klass' : '<%= project.klass %>',
+      'icon' : '<%= project.klass.underscore %>'
     }
 
