--- a/app/views/projects/index.erb
+++ b/app/views/projects/index.erb
@@ -12,12 +12,12 @@
   <form method="post" action="/categories">
     <input type="hidden" name="redirect_to" value="<%= request.fullpath %>">
     <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>"/>
+    <a href="javascript:;" onclick="$('div.category').children('input').each(function(i, elem){elem.checked=true})" style="margin-right: 10px">Все</a>
+    <a href="javascript:;" onclick="$('div.category').children('input').each(function(i, elem){elem.checked=false})">Ни одной</a>
+    <div style="clear: both; margin-top: 15px"></div>
     <% Category.top.each do |category| %>
       <div class="category">
-        <input type="checkbox" value="1" name="categories[<%= category.id %>]" <%= want_category?(category.id) ? 'checked="checked"' : '' %> onclick="window.checked = this.checked;$(this).parent().children('.child').children('input').map(function(i, elem){elem.checked=window.checked})" id="category_<%= category.id %>" /> <label for="category_<%= category.id %>"><%= category.title %></label>
-        <% category.categories.each do |subcategory| %>
-          <div class="child"><input name="categories[<%= subcategory.id %>]" value="1" type="checkbox" <%= want_category?(subcategory.id) ? 'checked="checked"' : '' %> id="category_<%= subcategory.id %>" /> <label for="category_<%= subcategory.id %>"><%= subcategory.title %></label></div>
-        <% end %>
+        <input type="checkbox" value="1" name="categories[<%= category.id %>]" <%= want_category?(category.id) ? 'checked="checked"' : '' %> id="category_<%= category.id %>" /> <label for="category_<%= category.id %>"><%= category.title %></label>
       </div>
     <% end %>
     <div style="clear: both">&nbsp;</div>
