--- a/app/views/feedback/create.js.erb
+++ b/app/views/feedback/create.js.erb
@@ -1,4 +1,1 @@
-$('#feedback').html('<p>Сообщение получено!</p>')
-window.setTimeout(function(){
-  $('#feedback').fadeOut()
-}, 5000);
+$('#feedback').hide()
