--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -4,12 +4,12 @@ body { font-family: Georgia; font-size: 16px }
 .project strong { float: right }
 .project.match { border: 10px solid red }
 #nav { text-align: center }
-#loader { position: absolute; margin-top: -100px; margin-left: 650px  }
-#notifier { position: fixed; top: 10px; right: 45px; font-size: 104px }
-#notifier a { text-decoration: none }
+#loader { position: absolute; margin-top: -100px; margin-left: 650px; }
+#notifier { position: fixed; top: 10px; right: 45px; width: 220px; }
 textarea, input { font-family : Georgia; font-size: 20px; padding: 4px; color: #666; }
+#feedback { position : fixed; bottom: 0px; right: 20px; background: white; height: 100%; }
 #feedback textarea { width: 200px; height: 100px; color: #666 }
-#feedback textarea.hover { color: #000; width: 300px; height: 300px }
+#feedback textarea.hover { color: #000; width: 100%; height: 90%; margin: 10px }
 #feedback p { padding: 5px }
 #counter { position: fixed; bottom: 10px; right: 10px }
 #flashbanner { position: absolute; left: -1000px }
@@ -23,6 +23,7 @@ a img { border: 0 }
 #categories .child { margin-left:15px; font-size:12px }
 #categories .category { width: 50%; float: left; margin-bottom: 10px }
 .invisible { display: none }
+a.up { float: right; text-decoration: none }
 
 
 /* jqModal base Styling courtesy of;
