--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -6,7 +6,7 @@ body { font-family: Georgia; font-size: 16px }
 #nav { text-align: center }
 #loader { position: absolute; margin-top: -100px; margin-left: 650px; }
 #notifier { position: fixed; top: 10px; right: 45px; width: 220px; }
-textarea, input { font-family : Georgia; font-size: 20px; padding: 4px; color: #666; }
+textarea, select, input { font-family : Georgia; font-size: 20px; padding: 4px; color: #666; }
 #feedback { position : fixed; bottom: 0px; right: 20px; background: white; height: 100%; }
 #feedback textarea { width: 200px; height: 100px; color: #666 }
 #feedback textarea.hover { color: #000; width: 100%; height: 90%; margin: 10px }
@@ -17,7 +17,7 @@ textarea, input { font-family : Georgia; font-size: 20px; padding: 4px; color: #
 #stop_words { width: 300px }
 #sources { position: fixed; right: 30px; bottom: 0px }
 input[type="button"], input[type="submit"] { font-size: 14px }
-#twitter { margin: 10px }
+#twitter { margin: 10px; text-align:  right }
 a img { border: 0 }
 .project img { float: left; margin-right: 5px }
 #categories .child { margin-left:15px; font-size:12px }
