Удаление старых объектов при неактивности

--- a/app/views/projects/index.erb
+++ b/app/views/projects/index.erb
@@ -55,7 +55,7 @@
     <br/><input type="submit" value="Применить" />
   </form>
   <div id="twitter">
-    <a href="/twitter"><img src="/images/twitter.jpg" alt="" align="absmiddle" /></a>
+    <a href="http://twitter.com/harumambu"><img src="/images/twitter.jpg" alt="" align="absmiddle" /></a>
   </div>
 
   <div id="feedback" class="invisible">
