--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -1,7 +1,9 @@
 %html
   %head
-    %title harumambu.ru
+    %title harumambu.ru — Весь фриланс рунета, фрилансер, freelancer, freelance, free-lance, удаленная работа, телеработа, акуудфтсу, акуу-дфтсу, ahbkfyc, free-lance.ru, weblancer.net, dalance.ru, freelancer.ru
     %meta(http-equiv="Content-type" content="text/html;charset=utf-8")
+    %meta(name="keywords" content="фриланс freelancer freelance free lance фрилансер фри ланс телеработа работа на дому удаленная работа дизайн конкурс фриленс freelans freelanser job графика сайт заработок в интернете работа в сети домашний бизнес 1c верстка рисунок 3d фриленс")
+    %meta(name="description" content="Harumambu.ru — Весь фриланс рунета, фрилансер, freelancer, freelance, free-lance, удаленная работа, телеработа, акуудфтсу, акуу-дфтсу, ahbkfyc, free-lance.ru, weblancer.net, dalance.ru, freelancer.ru")
     = javascript_include_tag "jquery"
     = javascript_include_tag "rails"
     = javascript_include_tag "application"
