--- a/app/views/projects/index.erb
+++ b/app/views/projects/index.erb
@@ -44,7 +44,7 @@
   </form>
 </div>
 <div id="sources">
-  <input type="checkbox" id="pause" /> <label for="pause">пауза (пробел)</label><br/><br/>
+  <input type="checkbox" id="pause" /> <label for="pause">пауза</label><br/><br/>
   <a href="#" class="jqModal">Категории</a><br/><br/>
   <form method="post" action="/sources">
     <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>"/>
