--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -12,9 +12,9 @@
 #loader { position: absolute; margin-top: -100px; margin-left: 650px; }
 #notifier { position: fixed; top: 10px; right: 45px; width: 220px; }
 /*textarea, select, input { font-family : Georgia; font-size: 20px; padding: 4px; color: #666; }*/
-#feedback { position : fixed; bottom: 0px; right: 20px; margin: 10px; background: white; height: 170px; }
-#feedback textarea { width: 200px; height: 100px; color: #666 }
-#feedback textarea.hover { color: #000; width: 100%; height: 90%; margin-bottom: 10px }
+#feedback { position : fixed; bottom: 0px; right: 20px; margin: 10px; height: 270px; z-index: 100 }
+#feedback textarea { width: 200px; height: 300px; color: #666 }
+#feedback textarea.hover { color: #000; width: 100%; height: 160px; margin-bottom: 10px }
 #feedback p { padding: 5px }
 #counter { position: fixed; bottom: 10px; right: 10px }
 #flashbanner { position: absolute; left: -1000px }
@@ -26,7 +26,7 @@
 a img { border: 0 }
 .project img { float: left; margin-right: 5px }
 #categories .child { margin-left:15px; font-size:12px }
-#categories .category { width: 50%; float: left; margin-bottom: 10px }
+#categories .category { width: 210px; float: left; margin-bottom: 3px }
 .invisible { display: none }
 a.up { float: right; text-decoration: none }
 
