--- a/app/views/projects/index.erb
+++ b/app/views/projects/index.erb
@@ -123,7 +123,8 @@ $().ready(function() {
 <div id="copyright">
   
   На сайте чего-то не хватает? <a href="javascript:;" onclick="$('#feedback').removeClass('invisible');$('#feedback_message').focus()">напишите нам</a>.
-    <a href="http://twitter.com/harumambu"><img src="/images/twitter.jpg" alt="" align="absmiddle" /></a>
+  <a href="http://twitter.com/harumambu"><img src="/images/twitter.jpg" alt="" align="absmiddle" /></a>
+  <a href="javascript:;" onclick="showRss()"><img src="/images/rss.gif" alt="" align="absmiddle"></a>
   
 <br/>Идея — <a href="http://golubeff.ru/">Павел Голубев</a><br/>
 Дизайн — Макс Вечеславов<br/>
