--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -20,6 +20,26 @@
     </head>
     <body>
     <%= yield %>
+    <script type="text/javascript"><!--
+    reformal_wdg_domain    = "harumambu";
+    reformal_wdg_mode    = 0;
+    reformal_wdg_title   = "harumambu.ru";
+    reformal_wdg_ltitle  = "";
+    reformal_wdg_lfont   = "";
+    reformal_wdg_lsize   = "";
+    reformal_wdg_color   = "#FFA000";
+    reformal_wdg_bcolor  = "#516683";
+    reformal_wdg_tcolor  = "#FFFFFF";
+    reformal_wdg_align   = "left";
+    reformal_wdg_charset = "utf-8";
+    reformal_wdg_waction = 0;
+    reformal_wdg_vcolor  = "#9FCE54";
+    reformal_wdg_cmline  = "#E0E0E0";
+    reformal_wdg_glcolor  = "#105895"
+    reformal_wdg_tbcolor  = "#FFFFFF"
+    //-->
+    </script>
+    <script type="text/javascript" language="JavaScript" src="http://widget.reformal.ru/tab5.js"></script><noscript><a href="http://harumambu.reformal.ru">harumambu.ru feedback </a> <a href="http://reformal.ru"><img src="http://reformal.ru/i/logo.gif" /></a></noscript>
     <!--LiveInternet counter--><script type="text/javascript">document.write("<a href='http://www.liveinternet.ru/click' target=_blank><img onload='this.style.display=\"none\"' src='//counter.yadro.ru/hit?t24.13;r" + escape(document.referrer) + ((typeof(screen)=="undefined")?"":";s"+screen.width+"*"+screen.height+"*"+(screen.colorDepth?screen.colorDepth:screen.pixelDepth)) + ";u" + escape(document.URL) +";i" + escape("Жж"+document.title.substring(0,80)) + ";" + Math.random() + "' border=0 width=88 height=15 alt='' title='LiveInternet: показано число посетителей за сегодня'><\/a>")</script><!--/LiveInternet-->
     </body>    
 </html>
