added selling note

--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -19,6 +19,9 @@
 <![endif]--> 
     </head>
     <body>
+      <div id="ads">
+        Сайт продается. email: pavel[at]golubeff.ru skype: pavel.golubev
+      </div>
     <%= yield %>
     <script type="text/javascript"><!--
     reformal_wdg_domain    = "harumambu";
