ads become note

--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -19,7 +19,7 @@
 <![endif]--> 
     </head>
     <body>
-      <div id="ads">
+      <div id="note">
         Сайт продается. email: pavel[at]golubeff.ru skype: pavel.golubev
       </div>
     <%= yield %>
